--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -14,6 +14,7 @@ html(ng-app='app')
       input(type='text' ng-model='emcee')
       br
       span {{emcee}}
+      writers
     #list(ng-repeat='product in products')
       li
         a(href='#') {{product.title}}
